release/releases/r5.0/index.rst

==================================
Release Notes: Tungsten Fabric 5.0
==================================

    `Table of Contents`_

    `Introduction`_

    `New and Changed Features`_

    `Supported Platforms Tungsten Fabric 5.0`_

    `Known Behavior`_

    `Resolved Issues`_

    `Deprecated Items`_

    `Requesting Technical Support`_

.. toctree::
   :maxdepth: 2
   :titlesonly:
   :glob:
   :hidden:

   contrail-release-notes-5.0-title.rst
   intro.rst
   new-and-changed-features.rst
   supported-platforms-50-vnc.rst
   known-behavior.rst
   resolved-issues.rst
   deprecated-items.rst
   request-support.rst

.. _Table of Contents: releases/contrail-release-notes-5.0-title.html

.. _Introduction: intro.html

.. _New and Changed Features: new-and-changed-features.html

.. _Supported Platforms Tungsten Fabric 5.0: supported-platforms-50-vnc.html

.. _Known Behavior: known-behavior.html

.. _Resolved Issues: resolved-issues.html

.. _Deprecated Items: deprecated-items.html

.. _Requesting Technical Support: request-support.html
